// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterInput component should render a checkbox input 1`] = `
<Checkbox
  aria-label="label"
  className="ins-c-filter-input__checkbox"
  id="id"
  isChecked={false}
  isDisabled={false}
  isLabelWrapped={false}
  isRequired={false}
  isValid={true}
  label="label"
  onChange={[Function]}
  ouiaId="label"
  ouiaSafe={true}
  value="value"
/>
`;

exports[`FilterInput component should render a radio input 1`] = `
<Radio
  aria-label="label"
  className="ins-c-filter-input__checkbox"
  id="id"
  isChecked={true}
  isDisabled={false}
  isValid={true}
  label="label"
  name="param"
  onChange={[Function]}
  ouiaId="label"
  value="value"
/>
`;
